Re-add sibling pointers in figure 10 (deletemin)

--- a/assignments/09_kocher/theorie.tex
+++ b/assignments/09_kocher/theorie.tex
@@ -536,7 +536,7 @@ Child-Sibling-Parent Darstellung die folgenden Pfeile verwendet werden:
     \node[elem, below = 1 of e-13] (e-21) {$21$}
       edge[pointer-parent, bend right] (e-13);
     \draw[pointer-child] (e-13.south) -- (e-21.north);
-    %\draw[pointer-sibling] (e-7.east) -- (e-13.west);
+    \draw[pointer-sibling] (e-7.east) -- (e-13.west);
     \node[elem, right = 3 of e-13] (e-3) {$3$};
     \node[elem, below = 1 of e-3] (e-14) {$14$}
       edge[pointer-parent, bend right] (e-3);
@@ -547,7 +547,7 @@ Child-Sibling-Parent Darstellung die folgenden Pfeile verwendet werden:
       edge[pointer-parent, bend right] (e-8);
     \draw[pointer-child] (e-8.south) -- (e-18.north);
     \draw[pointer-child] (e-3.south west) -- (e-8.north east);
-    %\draw[pointer-sibling] (e-13.east) -- (e-3.west);
+    \draw[pointer-sibling] (e-13.east) -- (e-3.west);
 
     \node[below = 1.5 of e-18] (meld-1) {$\Downarrow$};
     \node[right = 0 of meld-1] (meld-1-t) {$meld$};
@@ -560,7 +560,7 @@ Child-Sibling-Parent Darstellung die folgenden Pfeile verwendet werden:
     \node[elem, below = 1 of e-13] (e-21) {$21$}
       edge[pointer-parent, bend right] (e-13);
     \draw[pointer-child] (e-13.south) -- (e-21.north);
-    %\draw[pointer-sibling] (e-7.east) -- (e-13.west);
+    \draw[pointer-sibling] (e-7.east) -- (e-13.west);
     \node[elem, right = 3 of e-13] (e-3) {$3$};
     \node[elem, below = 1 of e-3] (e-14) {$14$}
       edge[pointer-parent, bend right] (e-3);
@@ -571,7 +571,7 @@ Child-Sibling-Parent Darstellung die folgenden Pfeile verwendet werden:
       edge[pointer-parent, bend right] (e-8);
     \draw[pointer-child] (e-8.south) -- (e-18.north);
     \draw[pointer-sibling] (e-8.east) -- (e-14.west);
-    %\draw[pointer-sibling] (e-13.east) -- (e-3.west);
+    \draw[pointer-sibling] (e-13.east) -- (e-3.west);
   
     \node[left = 1 of e-27] (meld-2) {$\Longleftarrow$};
 
@@ -595,7 +595,7 @@ Child-Sibling-Parent Darstellung die folgenden Pfeile verwendet werden:
       edge[pointer-parent, bend right] (e-8);
     \draw[pointer-child] (e-8.south) -- (e-18.north);
     \draw[pointer-sibling] (e-8.east) -- (e-14.west);
-    %\draw[pointer-sibling] (e-7.east) -- (e-3.west);
+    \draw[pointer-sibling] (e-7.east) -- (e-3.west);
 
     \node[below = 1 of e-18] (meld-3) {$\Downarrow$};
 
